--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <vue-datepicker-local v-model="time" disabled></vue-datepicker-local>
       <h3>Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
-      <vue-datepicker-local v-model="time"></vue-datepicker-local>
+      <vue-datepicker-local v-model="range"></vue-datepicker-local>
       <h3>Local</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;{<br>
         <b>dow:</b> 0, <i>// Sunday is the first day of the week</i><br>
