--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="default.css">
     <link rel="stylesheet" href="vue-datepicker-local.css">
     <style media="screen">
+      *{
+        font-family: Helvetica Neue For Number,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+      }
       code{
         display: inline-block;
         padding: 10px;
@@ -19,6 +23,35 @@
     </style>
   </head>
   <body>
+    <h2>Base data</h2>
+    <pre>
+      <code class="javascript">
+        new Vue({
+          el: '#app',
+          data: {
+            time: new Date(),
+            range: [new Date(),new Date()],
+            local: {
+              dow: 0, // Sunday is the first day of the week
+              hourTip: 'Select Hour', // tip of select hour
+              minuteTip: 'Select Minute', // tip of select minute
+              secondTip: 'Select Second', // tip of select second
+              yearSuffix: '', // suffix of head year
+              monthsHead: 'January_February_March_April_May_June_July_August_September_October_November_December'.split('_'), // months of head
+              months: 'Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec'.split('_'), // months of panel
+              weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks
+            }
+          },
+          methods: {
+            //disable the weekend
+            disabledDate (time) {
+              var day = time.getDay();
+              return day === 0 || day === 6;
+            }
+          }
+        })
+      </code>
+    </pre>
     <div id="app" style="margin-bottom:300px">
       <h3>Default</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
@@ -38,36 +71,40 @@
       <h3>Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="range"></vue-datepicker-local>
+      <h3>disabledDate</h3>
+      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :disabled-date=&quot;disabledDate&quot; &gt;&lt;/vue-datepicker-local&gt;</code>
+      <vue-datepicker-local v-model="time" :disabled-date="disabledDate" ></vue-datepicker-local>
       <h3>Local</h3>
-      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;{<br>
-        <b>dow:</b> 0, <i>// Sunday is the first day of the week</i><br>
-        <b>hourTip:</b> &#39;Select Hour&#39;, <i>// tip of select hour</i><br>
-        <b>minuteTip:</b> &#39;Select Minute&#39;, <i>// tip of select minute</i><br>
-        <b>secondTip:</b> &#39;Select Second&#39;, <i>// tip of select second</i><br>
-        <b>yearSuffix:</b> &#39;&#39;, <i>// suffix of head</i><br>
-        <b>monthsHead:</b> &#39;January_February_March_April_May_June_July_August_September_October_November_December&#39;.split(&#39;_&#39;), <i>// months of head</i><br>
-        <b>months:</b> &#39;Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec&#39;.split(&#39;_&#39;), <i>// months of panel</i><br>
-        <b>weeks: </b>&#39;Su_Mo_Tu_We_Th_Fr_Sa&#39;.split(&#39;_&#39;)<i> // weeks</i><br>
-      }&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
-      <vue-datepicker-local v-model="time" :local="{
-        dow: 0, // Sunday is the first day of the week
-        hourTip: 'Select Hour', // tip of select hour
-        minuteTip: 'Select Minute', // tip of select minute
-        secondTip: 'Select Second', // tip of select second
-        yearSuffix: '', // suffix of head
-        monthsHead: 'January_February_March_April_May_June_July_August_September_October_November_December'.split('_'), // months of head
-        months: 'Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec'.split('_'), // months of panel
-        weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks
-      }"></vue-datepicker-local>
+      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;local&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="time" :local="local" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
     </div>
+    <script src="highlight.js" charset="utf-8"></script>
     <script src="vue.min.js" charset="utf-8"></script>
     <script src="vue-datepicker-local.js" charset="utf-8"></script>
     <script type="text/javascript">
+      hljs.initHighlightingOnLoad();
       new Vue({
         el: '#app',
         data: {
           time: new Date(),
-          range: [new Date(),new Date()]
+          range: [new Date(),new Date()],
+          local: {
+            dow: 0, // Sunday is the first day of the week
+            hourTip: 'Select Hour', // tip of select hour
+            minuteTip: 'Select Minute', // tip of select minute
+            secondTip: 'Select Second', // tip of select second
+            yearSuffix: '', // suffix of head
+            monthsHead: 'January_February_March_April_May_June_July_August_September_October_November_December'.split('_'), // months of head
+            months: 'Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec'.split('_'), // months of panel
+            weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks
+          }
+        },
+        methods: {
+          //disable the weekend
+          disabledDate (time) {
+            var day = time.getDay();
+            return day === 0 || day === 6;
+          }
         }
       })
     </script>
