--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="range"></vue-datepicker-local>
       <h3>disabledDate</h3>
-      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :disabled-date=&quot;disabledDate&quot; &gt;&lt;/vue-datepicker-local&gt;</code>
+      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :disabled-date=&quot;disabledDate&quot; &gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" :disabled-date="disabledDate" ></vue-datepicker-local>
       <h3>Local</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;local&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
