--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           data: {
             time: new Date(),
             range: [new Date(),new Date()],
+            emptyTime: '',
+            emptyRange: [],
             local: {
               dow: 0, // Sunday is the first day of the week
               hourTip: 'Select Hour', // tip of select hour
@@ -67,7 +69,11 @@
       <vue-datepicker-local v-model="time" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
       <h3>Disabled</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; disabled&gt;&lt;/vue-datepicker-local&gt;</code><br>
-      <vue-datepicker-local v-model="time" disabled></vue-datepicker-local>
+      <h3>Clearable</h3>
+      <code>&lt;vue-datepicker-local v-model=&quot;emptyTime&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="emptyTime" clearable></vue-datepicker-local><br>
+      <code>&lt;vue-datepicker-local v-model=&quot;emptyRange&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="emptyRange" clearable></vue-datepicker-local>
       <h3>Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="range"></vue-datepicker-local>
@@ -88,6 +94,8 @@
         data: {
           time: new Date(),
           range: [new Date(),new Date()],
+          emptyTime: '',
+          emptyRange: [],
           local: {
             dow: 0, // Sunday is the first day of the week
             hourTip: 'Select Hour', // tip of select hour
