--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
       </code>
     </pre>
     <div id="app" style="margin-bottom:300px">
-      <h3>Default</h3>
+      <h3 id="default">Default</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time"></vue-datepicker-local>
-      <h3>Year</h3>
+      <h3 id="year">Year</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; format=&quot;YYYY&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" format="YYYY"></vue-datepicker-local>
-      <h3>Month</h3>
+      <h3 id="month">Month</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; format=&quot;YYYY-MM&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" format="YYYY-MM"></vue-datepicker-local>
-      <h3>Time</h3>
+      <h3 id="time">Time</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; format=&quot;YYYY-MM-DD HH:mm:ss&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
-      <h3>Disabled</h3>
+      <h3 id="disabled">Disabled</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; disabled&gt;&lt;/vue-datepicker-local&gt;</code><br>
-      <h3>Clearable</h3>
+      <h3 id="clearable">Clearable</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;emptyTime&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="emptyTime" clearable></vue-datepicker-local><br>
       <code>&lt;vue-datepicker-local v-model=&quot;emptyRange&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="emptyRange" clearable></vue-datepicker-local>
-      <h3>Range</h3>
+      <h3 id="range">Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="range"></vue-datepicker-local>
-      <h3>disabledDate</h3>
+      <h3 id="disableddate">disabledDate</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :disabled-date=&quot;disabledDate&quot; &gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" :disabled-date="disabledDate" ></vue-datepicker-local>
-      <h3>Local</h3>
+      <h3 id="local">Local</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;local&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" :local="local" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
     </div>
