--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
       <h3 id="disabled">Disabled</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; disabled&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <h3 id="clearable">Clearable</h3>
-      <code>&lt;vue-datepicker-local v-model=&quot;emptyTime&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <code>&lt;vue-datepicker-local v-model=&quot;emptyTime&quot; clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="emptyTime" clearable></vue-datepicker-local><br>
-      <code>&lt;vue-datepicker-local v-model=&quot;emptyRange&quot; Clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <code>&lt;vue-datepicker-local v-model=&quot;emptyRange&quot; clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="emptyRange" clearable></vue-datepicker-local>
       <h3 id="range">Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
