--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <vue-datepicker-local v-model="time" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
       <h3 id="disabled">Disabled</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; disabled&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="time" disabled></vue-datepicker-local>
       <h3 id="clearable">Clearable</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;emptyTime&quot; clearable&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="emptyTime" clearable></vue-datepicker-local><br>
