add rangeSeparator demo

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <h3 id="range">Range</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;range&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="range"></vue-datepicker-local>
+      <h3 id="rangeSeparator">Range Separator </h3>
+      <code>&lt;vue-datepicker-local v-model=&quot;range&quot; range-separator=&quot;至&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="range" range-separator="至"></vue-datepicker-local>
       <h3 id="disableddate">disabledDate</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :disabled-date=&quot;disabledDate&quot; &gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" :disabled-date="disabledDate" ></vue-datepicker-local>
