--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         },
         methods: {
           //disable the weekend
-          disabledDate (time) {
+          disabledDate: function (time) {
             var day = time.getDay();
             return day === 0 || day === 6;
           }
