suport inline mode

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <h3 id="local">Local</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; :local=&quot;local&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" :local="local" format="YYYY-MM-DD HH:mm:ss"></vue-datepicker-local>
+      <h3 id="inlineMode">Inline Mode</h3>
+      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; type=&quot;inline&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="time" type="inline"></vue-datepicker-local>
     </div>
     <script src="highlight.js" charset="utf-8"></script>
     <script src="vue.min.js" charset="utf-8"></script>
