--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
               yearSuffix: '', // suffix of head year
               monthsHead: 'January_February_March_April_May_June_July_August_September_October_November_December'.split('_'), // months of head
               months: 'Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec'.split('_'), // months of panel
-              weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks
+              weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks,
+              cancelTip: 'cancel',
+              submitTip: 'confirm'
             }
           },
           methods: {
@@ -90,6 +92,9 @@
       <h3 id="inlineMode">Inline Mode</h3>
       <code>&lt;vue-datepicker-local v-model=&quot;time&quot; type=&quot;inline&quot;&gt;&lt;/vue-datepicker-local&gt;</code><br>
       <vue-datepicker-local v-model="time" type="inline"></vue-datepicker-local>
+      <h3 id="showButtons">Show Buttons</h3>
+      <code>&lt;vue-datepicker-local v-model=&quot;time&quot; @confirm=&quot;confirm&quot; show-buttons &gt;&lt;/vue-datepicker-local&gt;</code><br>
+      <vue-datepicker-local v-model="time" @confirm="confirm" show-buttons></vue-datepicker-local>
     </div>
     <script src="highlight.js" charset="utf-8"></script>
     <script src="vue.min.js" charset="utf-8"></script>
@@ -111,7 +116,9 @@
             yearSuffix: '', // suffix of head
             monthsHead: 'January_February_March_April_May_June_July_August_September_October_November_December'.split('_'), // months of head
             months: 'Jan_Feb_Mar_Apr_May_Jun_Jul_Aug_Sep_Oct_Nov_Dec'.split('_'), // months of panel
-            weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_') // weeks
+            weeks: 'Su_Mo_Tu_We_Th_Fr_Sa'.split('_'), // weeks
+            cancelTip: 'cancel',
+            submitTip: 'confirm'
           }
         },
         methods: {
@@ -119,6 +126,9 @@
           disabledDate: function (time) {
             var day = time.getDay();
             return day === 0 || day === 6;
+          },
+          confirm: function (time) {
+            alert(time)
           }
         }
       })
